# city_search

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.deploy/docker/: Dockerfile  entrypoint.sh
.deploy/helm/app/: Chart.yaml  values.yaml
.deploy/helm/app/templates/: _envs.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml
.deploy/helm/values/: dev.yaml  prod.yaml
city_search/: aerich_monkeypatch.py  bigquery.py  cli.py  main.py  mock_db_init.py  models.py  serde.py  settings.py
city_search/legacy/: api.py  elastic_utils.py  serde.py  trips.py  utils.py
migrations/postgres/models/: 0_20220614130954_init.sql  0_20220615184745_init.sql  1_20220615213034_carrier_update_task.sql
migrations/sqlite/models/: 0_20220614142411_init.sql  0_20220615174833_init.sql  1_20220615203549_carrier_update_task.sql
tests/: test_app.py
